--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
         <h2>Vacation Contest Sign-Up Form</h2>
         <form method="GET" action="results.html">
             <div>
-                <label for="firstname">Your First Name</label>
-                <input type="text" id="firstname" name="firstname">
-                <label for="lastname">Your Last Name</label>
-                <input type="text" id="lastname" name="lastname">
+                <label for="firstname">Your First Name</label> <span class="required-field">*</span>
+                <input type="text" id="firstname" name="firstname" minlength="2" maxlength="35" required>
+                <label for="lastname">Your Last Name</label> <span class="required-field">*</span>
+                <input type="text" id="lastname" name="lastname" minlength="2" maxlength="35" required>
+                <label for="age">Your Age</label>
+                <input type="number" id="age" name="age" min="21" max="120">
+                <h5> One must be 21 or older to enter the contest </h5>
             </div>
             <fieldset>
                 <legend>Your Contact Info</legend>
                 <div>
-                    <label for="email">Your Email</label>
-                    <input type="email" id="email" name="email">
+                    <label for="email">Your Email</label> <span class="required-field">*</span>
+                    <input type="email" id="email" name="email" required>
                 </div>
                 <div>
                     <label for="address">Your Street Address</label>
@@ -86,7 +89,7 @@
                         <option value="WY">Wyoming</option>
                     </datalist>
                     <label for="zip">Your Zipcode</label>
-                    <input type="text" id="zip" name="zip">
+                    <input type="text" id="zip" name="zip" pattern="[0-9]{5}" title="5-Digit US ZIP Code">
                 </div>
             </fieldset>
 
@@ -131,6 +134,11 @@
                     <label for="drinks">All-inclusive Drinks Package</label>
                 </div>
             </fieldset>
+            <fieldset> 
+                <legend> Entry Code </legend>
+                <label for="code"> Your Secret Code </label> <span class="required-field">*</span>
+                <input id="code" name="code" type="password" title="6 Alphanumeric Character Passcode" pattern="[0-9A-Za-z]{6}" required>
+            </fieldset>
             
             <input type="submit" value="Enter the Contest!">
         </form>
@@ -140,4 +148,4 @@
         <p>All images provided for free use via <a href="https://unsplash.com/">Unsplash.com</a> whose generous <a href="https://unsplash.com/license">license details can be found here</a>.</p>
     </footer>
 </body>
-</html>
+</html> 
